--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/worktime.js"></script>
   </head>
 
   <body ng-app="starter">
