--- a/src/pages/new-nonbuisnesstime/new-nonbuisnesstime.html
+++ b/src/pages/new-nonbuisnesstime/new-nonbuisnesstime.html
@@ -34,6 +34,7 @@
         <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="newTime.dateto" name="dateto"></ion-datetime>
       </ion-item>
       <ion-item>
+        <ion-label>Halbtags:</ion-label>
         <ion-select [(ngModel)]="newTime.halfaday" name="halfaday" placeholder="Nein">
           <ion-option value="1">Ja</ion-option>
           <ion-option value="0">Nein</ion-option>
