--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,6 +19,7 @@
       <div class="col col-15">Bis</div>
       <div class="col col-15">Pause</div>
       <div class="col col-15">Ruhetag</div>
+      <div class="col col-15">Arbeitszeit</div>
     </div>
     <div class="row" ng-controller='HomePage'  *ngFor="let day of worktimes">
       <div class="col col-10">{{day.date}}</div>
@@ -28,6 +29,7 @@
       <div class="col col-15">{{day.timepmto}}</div>
       <div class="col col-15">{{day.pause}}</div>
       <div class="col col-15">{{day.restday}}</div>
+      <div class="col col-15">{{day.worktime}}</div>
     </div>
   </ion-item>
   <h3>Andere Einträge</h3>
