--- a/src/pages/personal/personal.html
+++ b/src/pages/personal/personal.html
@@ -5,22 +5,20 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Personaleinstellungen</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <h2>Benutzer bearbeiten</h2>
   <ion-item>
     <ion-label>Arbeiter:</ion-label>
     <ion-select name="username" [(ngModel)]="username" (ngModelChange)="showUser()">
       <ion-option *ngFor="let item of users">{{item}}</ion-option>
     </ion-select>
   </ion-item>
-  <form (ngSubmit)="createUser()" #registerForm="ngForm">
+  <form (ngSubmit)="changeUser()" #registerForm="ngForm">
     <ion-list>
       <ion-item>
         <ion-label color="primary">Name</ion-label>
@@ -69,6 +67,64 @@
       <ion-item>
         <ion-label color="primary">Aktiv</ion-label>
         <ion-input [(ngModel)]="user.active" name="active" type="number"></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-item>
+      <button ion-button type="submit">Speichern</button>
+    </ion-item>
+  </form>
+
+<h2>Neuen Benutzer erstellen</h2>
+<!-- Neuen Benutzer erstellen -->
+  <form (ngSubmit)="createUser()" #registerForm="ngForm">
+    <ion-list>
+      <ion-item>
+        <ion-label color="primary">Name</ion-label>
+        <ion-input [(ngModel)]="newUser.lastname" name="name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Vorname</ion-label>
+        <ion-input [(ngModel)]="newUser.firstname" name="firstname"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Username</ion-label>
+        <ion-input [(ngModel)]="newUser.username" name="username"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Passwort</ion-label>
+        <ion-input [(ngModel)]="newUser.password" name="password" type="password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Passwort bestätigen</ion-label>
+        <ion-input  type="password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Funktion</ion-label>
+        <ion-input [(ngModel)]="newUser.function" name="function"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Stundenziel</ion-label>
+        <ion-input [(ngModel)]="newUser.target_hours" name="target_hours"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Admin</ion-label>
+        <ion-input [(ngModel)]="newUser.admin" name="admin"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Ferientage</ion-label>
+        <ion-input [(ngModel)]="newUser.holiday_days" name="holiday_days"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Stunden pro Tag</ion-label>
+        <ion-input [(ngModel)]="newUser.hours_per_day" name="hoursperweek" type="number"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Stunden pro Monat</ion-label>
+        <ion-input [(ngModel)]="newUser.hours_per_month" name="hourspermonth" type="number"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Aktiv</ion-label>
+        <ion-input [(ngModel)]="newUser.active" name="active" type="number"></ion-input>
       </ion-item>
     </ion-list>
     <ion-item>
