--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,7 @@
       <div class="col col-15">Pause</div>
       <div class="col col-15">Ruhetag</div>
       <div class="col col-15">Arbeitszeit</div>
+      <div class="col col-15"></div>
     </div>
     <div class="row" ng-controller='HomePage'  *ngFor="let day of worktimes">
       <div class="col col-10">{{day.date}}</div>
@@ -35,6 +36,7 @@
       <div class="col col-15">{{day.pause}}</div>
       <div class="col col-15">{{day.restday}}</div>
       <div class="col col-15">{{day.worktime}}</div>
+      <div class="col col-15"><button ion-button color="change" value="{{day.fs_user}}" (click)="change(day.id_worktime)"><ion-icon name="settings"></ion-icon></button><button ion-button color="danger" value="{{day.fs_user}}" (click)="delete(day.id_worktime)"><ion-icon name="trash"></ion-icon></button></div>
     </div>
   </ion-item>
   <h3>Andere Einträge</h3>
