Worktimeeinträge können nun geändert und gelöscht werden.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,7 +36,7 @@
       <div class="col col-15">{{day.pause}}</div>
       <div class="col col-15">{{day.restday}}</div>
       <div class="col col-15">{{day.worktime}}</div>
-      <div class="col col-15"><button ion-button color="change" value="{{day.fs_user}}" (click)="change(day.id_worktime)"><ion-icon name="settings"></ion-icon></button><button ion-button color="danger" value="{{day.fs_user}}" (click)="delete(day.id_worktime)"><ion-icon name="trash"></ion-icon></button></div>
+      <div class="col col-15"><button ion-button color="change" value="{{day.fs_user}}" (click)="change(day)"><ion-icon name="settings"></ion-icon></button><button ion-button color="danger" value="{{day.fs_user}}" (click)="delete(day.id_worktime)"><ion-icon name="trash"></ion-icon></button></div>
     </div>
   </ion-item>
   <h3>Andere Einträge</h3>
