Kacke am dampfe

--- a/src/pages/new-nonbuisnesstime/new-nonbuisnesstime.html
+++ b/src/pages/new-nonbuisnesstime/new-nonbuisnesstime.html
@@ -12,8 +12,8 @@
 
 </ion-header>
 
-
 <ion-content padding>
+  <p colour="danger">Ferien können nur im selben Monat anfangen wie enden.</p>
   <form (ngSubmit)="createNonBuisnessTime()" #registerForm="ngForm">
     <ion-list>
       <ion-item>
