--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -16,27 +16,27 @@
 
   <ion-item>
     <ion-label>Monat</ion-label>
-    <ion-datetime displayFormat="MM" [(ngModel)]="month" (ngModelChange)="getLastMonth()"></ion-datetime>
-  </ion-item>
-  <ion-item>
-    <ion-label>Jahr</ion-label>
-    <ion-datetime displayFormat="YYYY" [(ngModel)]="year" (ngModelChange)="getLastMonth()"></ion-datetime>
+    <ion-datetime displayFormat="MM-YYYY" [(ngModel)]="time.month" (ngModelChange)="getLastMonth()"></ion-datetime>
   </ion-item>
 
   <ion-item type="item-text-wrap" >
     <div class="row" >
-      <div class="col col-10">Datum</div>
-      <div class="col col-15">Von</div>
-      <div class="col col-15">Bis</div>
-      <div class="col col-15">Von</div>
-      <div class="col col-15">Bis</div>
+      <div class="col col-20">Tag</div>
+      <div class="col col-20">Datum</div>
+      <div class="col col-20">Art</div>
+      <div class="col col-15">Morgen Von</div>
+      <div class="col col-15">Morgen Bis</div>
+      <div class="col col-15">Nachmittag Von</div>
+      <div class="col col-15">Nachmittag Bis</div>
       <div class="col col-15">Pause</div>
       <div class="col col-15">Ruhetag</div>
       <div class="col col-15">Arbeitszeit</div>
       <div class="col col-15"></div>
     </div>
-    <!--<div class="row" ng-controller='HomePage'  *ngFor="let day of worktimes">
-      <div class="col col-10">{{day.date}}</div>
+    <div class="row" ng-controller='HomePage'  *ngFor="let day of worktimes">
+      <div class="col col-15">{{day.day_name}}</div>
+      <div class="col col-15">{{day.date}}</div>
+      <div class="col col-15">{{day.type}}</div>
       <div class="col col-15">{{day.timeamfrom}}</div>
       <div class="col col-15">{{day.timeamto}}</div>
       <div class="col col-15">{{day.timepmfrom}}</div>
@@ -45,21 +45,6 @@
       <div class="col col-15">{{day.restday}}</div>
       <div class="col col-15">{{day.worktime}}</div>
       <div class="col col-15"><button ion-button color="change" value="{{day.fs_user}}" (click)="change(day)"><ion-icon name="settings"></ion-icon></button><button ion-button color="danger" value="{{day.fs_user}}" (click)="delete(day.id_worktime)"><ion-icon name="trash"></ion-icon></button></div>
-    </div>-->
-  </ion-item>
-  <h3>Andere Einträge</h3>
-  <ion-item type="item-text-wrap">
-    <div class="row">
-      <div class="col col-10">Art</div>
-      <div class="col col-15">Datum von</div>
-      <div class="col col-15">Datum bis</div>
-      <div class="col col-15">halber Tag</div>
     </div>
-    <!--<div class="row" ng-controller='HomePage' *ngFor="let day of othertimes">
-      <div class="col col-10">{{day.type}}</div>
-      <div class="col col-15">{{day.datefrom}}</div>
-      <div class="col col-15">{{day.dateto}}</div>
-      <div class="col col-15">{{day.halfaday}}</div>
-    </div>-->
   </ion-item>
 </ion-content>
